--- a/index.html
+++ b/index.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>{app_title}</title>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="The personal website of Pol Marcet Sardà, a C++ engineer that likes to mess arround with tech"
+    />
 
-<head>
-	<title>{app_title}</title>
-	<meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta charset="UTF-8" />
-	<meta name="description"
-		content="The personal website of Pol Marcet Sardà, a C++ engineer that likes to mess arround with tech">
-	<link rel="preload" href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" as="style"
-		onload="this.onload=null;this.rel='stylesheet'">
-	<noscript>
-		<link rel="stylesheet" href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css">
-	</noscript>
-	{style_include}
-</head>
+    {style_include}
+  </head>
 
-<body>
-	<div id="main">
-	</div>
-	{script_include}
-</body>
-
+  <body>
+    <div id="main"></div>
+    {script_include}
+  </body>
 </html>
