--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     />
 
     {style_include}
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
-      type="text/css"
-      href="//fonts.googleapis.com/css?family=Raleway"
     />
     <link
       rel="preload"
