--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
       content="The personal website of Pol Marcet Sardà, a C++ engineer that likes to mess arround with tech"
     />
 
-    {style_include}
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
+      rel="preload"
+      as="font"
+      href="/fonts/1Ptug8zYS_SKggPNyC0ITw.woff2"
+      crossorigin
     />
+
+    {style_include}
     <link
       rel="preload"
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
