Experiments with webgpu

--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
     <link
       rel="preload"
       as="font"
-      href="/fonts/1Ptug8zYS_SKggPNyC0ITw.woff2"
+      href="assets/fonts/1Ptug8zYS_SKggPNyC0ITw.woff2"
       crossorigin
     />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+  </head>
 
+  <body>
+    <div id="main"></div>
     {style_include}
     <link
       rel="preload"
@@ -29,10 +33,5 @@
         rel="stylesheet"
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
     /></noscript>
-  </head>
-
-  <body>
-    <div id="main"></div>
-    {script_include}
   </body>
 </html>
